--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <input id="demo" type="text">
 <button type="button" onclick="myFunction()">Test Input</button>
+<button type="button" onclick="myFunction1()">Test Input2</button>
 <p id="error-msg"></p>
 <script>
 function myFunction() {
