--- a/index.html
+++ b/index.html
@@ -1,65 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Email Validation</title>
+  <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+    .error {
+      color: red;
+      font-size: 14px;
+      margin-top: 4px;
+    }
+  </style>
 </head>
 <body>
 
-<div class="container mt-3">
-  <h2>Stacked form</h2>
-  <form action="/action_page.php">
-    <div class="mb-3 mt-3">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-    </div>
-    <div class="mb-3">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
-    </div>
-    <div class="form-check mb-3">
-      <label class="form-check-label">
-        <input class="form-check-input" type="checkbox" name="remember"> Remember me
-      </label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+<div class=" center-container">
+    <h2>Validation Form</h2>
+<form id="myForm" onsubmit="return validateEmail()">
+  <label for="email">Email:</label><br>
+  <input type="text" id="email" name="email" required><br>
+  <div id="email-error" class="error"></div>
+  <label for="pwd">Password:</label><br>
+  <input type="password" id="password" name="password" required><br>
+  <div id="password-error" class="error"></div>
+  <button class="btn-submit" type="submit">Submit</button>
+</form>
 </div>
 
+<script>
+    document.getElementById("myForm").addEventListener("submit", function(event) {
+  const password = document.getElementById("password").value;
+  const errorDiv = document.getElementById("password-error");
+
+  const passwordPattern = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$/
+;
+
+  if (!passwordPattern.test(password)) {
+    errorDiv.textContent = "Password must be at least 8 characters, include uppercase, lowercase, number, and special character.";
+    event.preventDefault(); // Stop form submission
+  } else {
+    errorDiv.textContent = ""; // Clear error
+  }
+});
+</script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-<!-- <input id="demo" type="text">
-<button type="button" onclick="myFunction()">Test Input</button>
-<button type="button" onclick="myFunction1()">Test Input2</button>
-<p id="error-msg"></p>
-<script>
-function myFunction() {
-  const message = document.getElementById("error-msg");
-  message.innerHTML = "";
-  let x = document.getElementById("demo").value;
-  try {
-    if(x.trim() == "") throw "empty";
-    if(isNaN(x)) throw "not a number";
-    x = Number(x);
-    if(x < 5) throw "too low";
-    if(x > 5) throw "average";
-    if(x > 10) throw "too high";
-  }
-  catch(err) {
-    message.innerHTML = "Input value is " + err;
-  }
-}
-</script> -->
